# Multi-agent_memory_assistant

./: .gitignore  CLAUDE.md  DriftScope-MA_program_requirements.md  README.md  pyproject.toml
driftscope/: __init__.py
driftscope/agents/: base.py  candidate_selector.py  conflict_agent.py  conflict_validator.py  response_agent.py  retriever_agent.py  topic_predictor.py  types.py  update_agent.py
driftscope/config/: __init__.py  default.yaml  loader.py  mem0_oss_deepseek_qdrant.yaml  mem0_oss_gpt4omini_qdrant.yaml  mem0_oss_openai_qdrant.yaml  scope_compat.yaml  topic_tree.yaml
driftscope/core/: __init__.py  memory_base.py  schema.py  scope_compat.py  topic_tree.py
driftscope/embeddings/: __init__.py  client.py
driftscope/eval/: __init__.py  instrumentation.py
driftscope/llm/: __init__.py  client.py  deepseek.py  factory.py  mock.py  openrouter.py
driftscope/pipeline/: __init__.py  orchestrator.py  transitions.py
driftscope/retrieval/: __init__.py  query_time_parser.py  rule_time_parser.py
tests/unit/: helpers.py  test_candidate_selector.py  test_conflict_agent.py  test_conflict_validator.py  test_deepseek_client.py  test_embeddings.py  test_hybrid_retriever.py  test_llm_factory.py  test_llm_response_agent.py  test_llm_update_agent.py  test_llm_update_agent_topic.py  test_longmemeval_adapter.py  test_longmemeval_cli.py  test_longmemeval_runner.py  test_mem0_baseline.py  test_memory_base.py  test_memory_base_new_columns.py  test_memory_embeddings.py  test_multi_topic_retrieval.py  test_openrouter_client.py  test_orchestrator.py  test_response_agent.py  (+9 more)
(+7 files in other folders)
